--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ rvm:
 - ruby-head
 bundler_args: "--jobs=2"
 before_script:
+- export CODECLIMATE_REPO_TOKEN=ba1cb6377edbaa3baf183aad543a1db02e0f2b75fe676fa8b9db2294850af609
+- export COVERAGE=true
 script:
-- COVERAGE=true bundle exec rspec
+- bundle exec rspec
 - bundle exec rubydoctest README.md
 branches:
   only:
