--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
 - export COVERAGE=true
 script:
 - bundle exec rspec
+- bundle exec codeclimate-test-reporter
 - bundle exec rubydoctest README.md
 branches:
   only:
