--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,14 @@ before_install:
   - gem update --system --no-document
   - gem install bundler -v 1.16.1 --no-document
 before_script:
-  - export CODECLIMATE_REPO_TOKEN=ba1cb6377edbaa3baf183aad543a1db02e0f2b75fe676fa8b9db2294850af609
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
   - bundle exec rspec
-  - bundle exec codeclimate-test-reporter
   - bundle exec rubydoctest README.md
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 branches:
   only:
     - master
@@ -29,3 +32,6 @@ matrix:
   allow_failures:
     - rvm: ruby-head
 sudo: false
+env:
+  global:
+    - CC_TEST_REPORTER_ID=ba1cb6377edbaa3baf183aad543a1db02e0f2b75fe676fa8b9db2294850af609
