--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,7 @@ on:
 
 jobs:
   test:
-    # runs-on: ubuntu-latest
-    runs-on: ${{ (matrix.runner != '' && matrix.runner) || 'ubuntu-latest' }}
+    runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
@@ -35,11 +34,6 @@ jobs:
           - "3.2"
           - "3.3"
           - "3.4"
-
-        include:
-          # ref. https://github.com/ruby/setup-ruby/issues/496#issuecomment-1520662740
-          - ruby: "2.2"
-            runner: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v4
